cros-ide: Rename cros-ide-gerrit
Rename the prefix to chromiumide for consistency.

BUG=b:284404807
TEST=npm t

Change-Id: I04d69b5a41b18d736f3ac6db54c67f68534645a9
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/4614798
Tested-by: Keigo Oka <oka@chromium.org>
Auto-Submit: Keigo Oka <oka@chromium.org>
Reviewed-by: Shuhei Takahashi <nya@chromium.org>
Commit-Queue: Keigo Oka <oka@chromium.org>

--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -363,17 +363,17 @@
         {
           "command": "chromiumide.gerrit.reply",
           "group": "inline@a",
-          "when": "commentController == cros-ide-gerrit"
+          "when": "commentController == chromiumide-gerrit"
         },
         {
           "command": "chromiumide.gerrit.replyAndResolve",
           "group": "inline@b",
-          "when": "commentController == cros-ide-gerrit && commentThread =~ /<unresolved>/"
+          "when": "commentController == chromiumide-gerrit && commentThread =~ /<unresolved>/"
         },
         {
           "command": "chromiumide.gerrit.replyAndUnresolve",
           "group": "inline@b",
-          "when": "commentController == cros-ide-gerrit && commentThread =~ /<resolved>/"
+          "when": "commentController == chromiumide-gerrit && commentThread =~ /<resolved>/"
         }
       ],
       "comments/comment/title": [
