cros-ide: Update activitybar title to mention Chromium
BUG=b:272416720
TEST=Hover on the Chrome icon and confirm the text is updated.

Change-Id: I3a69d35c202a8efcf2d55b3b3fbd00f469c9aed6
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/4629779
Auto-Submit: Keigo Oka <oka@chromium.org>
Commit-Queue: Shuhei Takahashi <nya@chromium.org>
Tested-by: Keigo Oka <oka@chromium.org>
Reviewed-by: Shuhei Takahashi <nya@chromium.org>

--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -315,7 +315,7 @@
       "activitybar": [
         {
           "id": "cros-view",
-          "title": "CrOS Development",
+          "title": "Chromium(OS) Development",
           "icon": "media/cros-device.svg"
         }
       ]
