cros-ide: Move out tast from under development
BUG=b:272771410
TEST=npm t

Change-Id: I3dc90118da26f7ae5b8b37d98863d5111a760b15
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/4639722
Tested-by: Keigo Oka <oka@chromium.org>
Reviewed-by: Shuhei Takahashi <nya@chromium.org>
Commit-Queue: Keigo Oka <oka@chromium.org>

--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -712,6 +712,11 @@
           "description": "Enable Tricium spellchecker. Requires a reload to take effect.",
           "default": true
         },
+        "chromiumide.tast.enabled": {
+          "type": "boolean",
+          "description": "Enable Tast Support",
+          "default": true
+        },
         "chromiumide.testCoverage.enabled": {
           "type": "boolean",
           "markdownDescription": "Show Code Coverage ([go/cros-ide-doc-boards-pkgs#code-coverage](http://go/cros-ide-doc-boards-pkgs#code-coverage)). Requires a reload to take effect.",
@@ -755,11 +760,6 @@
         "chromiumide.underDevelopment.systemLogViewer": {
           "type": "boolean",
           "description": "Enable system log viewer",
-          "default": true
-        },
-        "chromiumide.underDevelopment.tast": {
-          "type": "boolean",
-          "description": "Enable Tast Support",
           "default": true
         },
         "chromiumide.underDevelopment.testCoverage": {
