cros-ide: Add a configuration for extra args to tast run
BUG=b:272771410
TEST=npm t
TEST=Update the config to ["-var=foo=bar"], and confirm the arguments
are given to tast run.

Change-Id: I060bf3f3725d4c4f1ca29f107390731b939177d5
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/4639725
Reviewed-by: Shuhei Takahashi <nya@chromium.org>
Commit-Queue: Keigo Oka <oka@chromium.org>
Tested-by: Keigo Oka <oka@chromium.org>

--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -717,6 +717,11 @@
           "description": "Enable Tast Support",
           "default": true
         },
+        "chromiumide.tast.extraArgs": {
+          "type": "array",
+          "description": "Extra args given to tast run, e.g. -var=foo=bar.",
+          "default": []
+        },
         "chromiumide.testCoverage.enabled": {
           "type": "boolean",
           "markdownDescription": "Show Code Coverage ([go/cros-ide-doc-boards-pkgs#code-coverage](http://go/cros-ide-doc-boards-pkgs#code-coverage)). Requires a reload to take effect.",
