ide: Execute webpack in parallel with build
We can run execution of webpack plugins and build operation in parallel
to improve the entire build time by 1 second, making it 5 seconds.

BUG=b:275545000
TEST=npm t
TEST=confirm VNC view for a leased device works as before.
TEST=confirm log viewer for a leased device works as before.

Change-Id: I81a885bec3d790f6e33cc9742d1b1eb43d815ddf
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/4705635
Commit-Queue: Keigo Oka <oka@chromium.org>
Tested-by: Keigo Oka <oka@chromium.org>
Reviewed-by: Shuhei Takahashi <nya@chromium.org>

--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -1002,8 +1002,8 @@
     ]
   },
   "scripts": {
-    "build": "rm -rf dist && webpack && npx ts-node tools/build.ts -p tools",
-    "build-release": "rm -rf dist && webpack --mode production --devtool hidden-source-map && NODE_ENV=production npx ts-node tools/build.ts -p tools",
+    "build": "rm -rf dist && npx ts-node tools/build.ts -p tools",
+    "build-release": "rm -rf dist && NODE_ENV=production npx ts-node tools/build.ts -p tools",
     "build-tests": "rm -rf out && tsc -p . --outDir out",
     "build-all": "npm run build && npm run build-tests",
     "test": "npm run unit-test && npm run integration-test",
