--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -1002,7 +1002,7 @@
     ]
   },
   "scripts": {
-    "build": "rm -rf dist && npx ts-node tools/build.ts -p tools",
+    "build": "rm -rf dist && npx ts-node --swc tools/build.ts -p tools",
     "build-release": "rm -rf dist && NODE_ENV=production npx ts-node tools/build.ts -p tools",
     "build-tests": "rm -rf out && tsc -p . --outDir out",
     "build-all": "npm run build && npm run build-tests",
@@ -1041,6 +1041,7 @@
     "ws": "^8.6.0"
   },
   "devDependencies": {
+    "@swc/core": "^1.3.69",
     "@types/glob": "^7.1.4",
     "@types/jasmine": "^4.0.0",
     "@types/mock-fs": "^4.13.1",
@@ -1074,6 +1075,7 @@
     "ovsx": "^0.5.1",
     "ssh2": "^1.10.0",
     "ts-loader": "^9.2.6",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.4",
     "vscode-tmgrammar-test": "^0.1.1",
     "vscode-uri": "^3.0.3",
