ide: Start tast debugger development under a flag
Create a scaffolding to integrate debugger of Tast tests in
ChromiumIDE. This change involves refactoring to extract common
functionalities between debugging and running Tast tests.

BUG=b:255632861
TEST=npm run preupload
TEST=Run a tast test (ChromeFixture) and confirm it passes.
TEST=Confirm the flag is disabled by default, right click the play
button by the ChromeFixture test case and confirm "Debug Test" option
doesn't appear.
TEST=Enable the flag from the setting, reload the window, right click
the play button by the ChromeFixture test case and confirm the "Debug
Test" option appears. Click it and confirm no error happens, though
actual debugging doesn't happen.

Change-Id: I3048c2ff3a1bb6e66613e11b8d01494345b40be1
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/4776737
Commit-Queue: Keigo Oka <oka@chromium.org>
Reviewed-by: Eric Lok <lokeric@google.com>
Tested-by: Keigo Oka <oka@chromium.org>

--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -126,6 +126,13 @@
         "title": "Copy Hostname"
       },
       {
+        "command": "chromiumide.deviceManagement.debugTastTests",
+        "category": "CrOS",
+        "title": "Debug tast tests",
+        "icon": "$(debug-alt)",
+        "enablement": "config.chromiumide.underDevelopment.tastDebugging"
+      },
+      {
         "command": "chromiumide.deviceManagement.runTastTests",
         "category": "CrOS",
         "title": "Run tast tests",
@@ -835,6 +842,11 @@
           "type": "boolean",
           "description": "Enable system log viewer",
           "default": true
+        },
+        "chromiumide.underDevelopment.tastDebugging": {
+          "type": "boolean",
+          "description": "Enable tast tests debugging",
+          "default": false
         },
         "chromiumide.underDevelopment.testCoverage": {
           "type": "boolean",
