ide: boards and packages: add context menu to workon packages
This is a part of the changes to overhaul boards and packages view.
See the commit message of https://crrev.com/c/4791430 for all the TODOs
we will fix through these changes.

Design doc: http://go/chromiumide-dd-build-and-deploy

BUG=b:214336231
TEST=npm run preupload
TEST=right click on codelab, click the menu to workon it, right click
it again, and confirm the menu is now to stop working on it.
TEST=right click on codelab, click the menu to stop working on it,
right click it again, and confirm the menu is now to start work on it.
TEST=right click on dev-go/delve and confirm no menu related to workon
is shown.

Change-Id: I1f522f0621cc199538735c9d660514cfce437ed9
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/4835435
Commit-Queue: Keigo Oka <oka@chromium.org>
Tested-by: Keigo Oka <oka@chromium.org>
Reviewed-by: Shuhei Takahashi <nya@chromium.org>

--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -165,11 +165,16 @@
         "enablement": "!config.chromiumide.underDevelopment.boardsAndPackagesV2"
       },
       {
+        "command": "chromiumide.crosWorkonStart",
+        "category": "CrOS",
+        "title": "Start Working on",
+        "enablement": "config.chromiumide.underDevelopment.boardsAndPackagesV2"
+      },
+      {
         "command": "chromiumide.crosWorkonStop",
         "category": "CrOS",
         "title": "Stop Working On",
-        "icon": "$(remove)",
-        "enablement": "!config.chromiumide.underDevelopment.boardsAndPackagesV2"
+        "icon": "$(remove)"
       },
       {
         "command": "chromiumide.openEbuild",
@@ -580,9 +585,19 @@
           "group": "inline"
         },
         {
+          "command": "chromiumide.crosWorkonStart",
+          "when": "view == boards-and-packages && viewItem == package-stopped",
+          "group": "3_workon"
+        },
+        {
           "command": "chromiumide.crosWorkonStop",
           "when": "view == legacy-boards-packages && viewItem == package",
           "group": "inline"
+        },
+        {
+          "command": "chromiumide.crosWorkonStop",
+          "when": "view == boards-and-packages && viewItem == package-started",
+          "group": "3_workon"
         },
         {
           "command": "chromiumide.openEbuild",
@@ -644,6 +659,10 @@
         },
         {
           "command": "chromiumide.cppxrefs.forceGenerate",
+          "when": "false"
+        },
+        {
+          "command": "chromiumide.crosWorkonStart",
           "when": "false"
         },
         {
