ide: Enable tast tests debugging by default
BUG=b:255632861
TEST=npm run preupload
TEST=Manually run “Debug Test” in the go file such as chromiumos/src/platform/tast-tests/src/go.chromium.org/tast-tests/cros/local/bundles/cros/example/chrome_fixture.go and ensure that the debugger works. Log is emitted in the OUTPUT tab of "ChromiumIDE: Device Management" and the terminal.

Change-Id: I82ce49d521a3ef4b450add3eacff38af8b4a82af
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/4881798
Reviewed-by: Keigo Oka <oka@chromium.org>
Tested-by: Chiaki Ushimaru <uchiaki@google.com>
Reviewed-by: Tatsuhisa Yamaguchi <yamaguchi@chromium.org>
Commit-Queue: Chiaki Ushimaru <uchiaki@google.com>

--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -939,7 +939,7 @@
         "chromiumide.underDevelopment.tastDebugging": {
           "type": "boolean",
           "description": "Enable tast tests debugging",
-          "default": false
+          "default": true
         },
         "chromiumide.deviceManagement.devices": {
           "type": "array",
