ide: boards and packages: Fix wrong package.json entries
Fix mistakes made in https://crrev.com/c/4900221.
Remove a wrong entry and add missing entries to enable build command in
boards and packages view.

BUG=b:214336231
TEST=npm run preupload
TEST=right click a package, click the build menu, confirm the right
command is executed.

Change-Id: I40acfd4bd92caa7926a536aa3e66146e2130c48e
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/4904448
Auto-Submit: Keigo Oka <oka@chromium.org>
Tested-by: Keigo Oka <oka@chromium.org>
Commit-Queue: Keigo Oka <oka@chromium.org>
Reviewed-by: Shuhei Takahashi <nya@chromium.org>

--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -28,6 +28,11 @@
   "contributes": {
     "commands": [
       {
+        "command": "chromiumide.boardsAndPackages.build",
+        "category": "CrOS",
+        "title": "Build the package"
+      },
+      {
         "command": "chromiumide.boardsAndPackages.crosWorkonStart",
         "category": "CrOS",
         "title": "Start Working on"
@@ -680,6 +685,10 @@
       ],
       "commandPalette": [
         {
+          "command": "chromiumide.boardsAndPackages.build",
+          "when": "false"
+        },
+        {
           "command": "chromiumide.boardsAndPackages.crosWorkonStart",
           "when": "false"
         },
@@ -729,10 +738,6 @@
         },
         {
           "command": "chromiumide.cppxrefs.forceGenerate",
-          "when": "false"
-        },
-        {
-          "command": "chromiumide.deviceManagement.build",
           "when": "false"
         },
         {
