ide: add presubmit that adds docker test container
We're working on getting the existing unit tests working, some fail
within the container. Right now it all but about 5 unit tests are
failing.

BUG=b:279819145
TEST=CQ now executes these tests!

Change-Id: If5ce6feeb72814a51917c1fc891e8b2c53a1b5a3
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/infra/ide/+/5041490
Reviewed-by: Keigo Oka <oka@chromium.org>
Tested-by: George Engelbrecht <engeg@google.com>
Commit-Queue: George Engelbrecht <engeg@google.com>

--- a/chromiumide/package.json
+++ b/chromiumide/package.json
@@ -1189,6 +1189,7 @@
     "build-all": "wireit",
     "check": "wireit",
     "test": "wireit",
+    "cq-test": "wireit",
     "unit-test": "wireit",
     "integration-test": "wireit",
     "e2e-test": "wireit",
@@ -1269,6 +1270,13 @@
     "test": {
       "dependencies": [
         "unit-test",
+        "integration-test",
+        "check",
+        "lint"
+      ]
+    },
+    "cq-test": {
+      "dependencies": [
         "integration-test",
         "check",
         "lint"
