ide: use node 18.15.0
* Update .nvmrc and @types/node versions
* Update tests not to fail
* Update the node verison used on CQ. 18.15.0 doesn't exist in cipd
  repository, so I chose 18.16.0 as the nearest available version.

BUG=b:317666739
TEST=npm t

Change-Id: I6aab436518323b6f0278646d8349a9313ca2755a
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/infra/ide/+/5151632
Reviewed-by: Tatsuhisa Yamaguchi <yamaguchi@chromium.org>
Tested-by: Keigo Oka <oka@chromium.org>
Commit-Queue: Keigo Oka <oka@chromium.org>

--- a/chromiumide/package.json
+++ b/chromiumide/package.json
@@ -11,7 +11,7 @@
   "license": "BSD-3-Clause",
   "engines": {
     "vscode": "^1.75.1",
-    "node": "16.x"
+    "node": ">=16"
   },
   "icon": "media/cros-device.png",
   "categories": [
@@ -1359,7 +1359,7 @@
     "@types/glob": "^7.1.4",
     "@types/jasmine": "^4.0.0",
     "@types/mock-fs": "^4.13.1",
-    "@types/node": "16.x",
+    "@types/node": "18.15.0",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "@types/semver": "^7.3.9",
