ide: Update npm run lint and npm run fix to check/format json
In chromiumide directory, VSCode is already configured to format json
via prettier, but formatting them was not enforced by linter. With
this change, we update `npm run lint` to check json files are
formatted with prettier and update `npm run fix` to format them.

BUG=b:251715696
TEST=npm run lint # reports formatting issues and fails
TEST=npm run fix # fixes them
TEST=npm run lint # passes
TEST=open an updated json file in VSCode and save to format it. Nothing
changes.

Change-Id: I02491e6e50c5a0a4d00cc74b719016c25ca15eed
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/infra/ide/+/5209771
Auto-Submit: Keigo Oka <oka@chromium.org>
Commit-Queue: Keigo Oka <oka@chromium.org>
Reviewed-by: Grace Cham <hscham@chromium.org>
Tested-by: Keigo Oka <oka@chromium.org>

--- a/chromiumide/package.json
+++ b/chromiumide/package.json
@@ -1253,8 +1253,11 @@
     "e2e-test": "wireit",
     "lint": "wireit",
     "lint-code": "wireit",
+    "lint-json": "wireit",
     "lint-license": "wireit",
     "fix": "wireit",
+    "fix-code": "wireit",
+    "fix-json": "wireit",
     "preupload": "wireit",
     "vscode:prepublish": "wireit"
   },
@@ -1311,6 +1314,7 @@
     "lint": {
       "dependencies": [
         "lint-code",
+        "lint-json",
         "lint-license"
       ]
     },
@@ -1318,12 +1322,25 @@
       "command": "gts lint",
       "output": []
     },
-    "fix": {
-      "command": "gts fix"
+    "lint-json": {
+      "command": "prettier '**/*.json' !package-lock.json --check --ignore-path .gitignore",
+      "output": []
     },
     "lint-license": {
       "command": "jsgl --local .",
       "output": []
+    },
+    "fix": {
+      "dependencies": [
+        "fix-code",
+        "fix-json"
+      ]
+    },
+    "fix-code": {
+      "command": "gts fix"
+    },
+    "fix-json": {
+      "command": "prettier '**/*.json' !package-lock.json --write --ignore-path .gitignore"
     },
     "test": {
       "dependencies": [
