--- a/chromiumide/views/tsconfig.json
+++ b/chromiumide/views/tsconfig.json
@@ -2,11 +2,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "ES2020",
-    "lib": [
-      "ES2020",
-      "DOM",
-      "DOM.iterable"
-    ],
+    "lib": ["ES2020", "DOM", "DOM.iterable"],
     "sourceMap": true,
     "rootDirs": ["src", "../src"],
     "strict": true,
@@ -14,7 +10,5 @@
     "isolatedModules": true,
     "esModuleInterop": true
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src"]
 }
