Start experimenting internal IDE integration
Create a new directory (shared/app and shared/driver) and implement a
demo feature in it for confirming our basic design idea works out.

BUG=b:319548749
TEST=manually confirm the new demo feature works after enabling it
TEST=npm t

Change-Id: I01606f8b150cbb3e57ed2a2c332cc710afe12bbf
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/infra/ide/+/5219402
Reviewed-by: Grace Cham <hscham@chromium.org>
Tested-by: Keigo Oka <oka@chromium.org>
Commit-Queue: Keigo Oka <oka@chromium.org>

--- a/chromiumide/package.json
+++ b/chromiumide/package.json
@@ -383,6 +383,12 @@
         "title": "git cl format",
         "icon": "$(whitespace)",
         "category": "Chromium"
+      },
+      {
+        "command": "chromiumideShared.demo.showRandomUuid",
+        "title": "Show Random UUID",
+        "category": "Demo",
+        "enablement": "config.chromiumideShared.demo.enable"
       }
     ],
     "viewsContainers": {
@@ -1067,6 +1073,11 @@
         "chromiumide.paths.depotTools": {
           "type": "string",
           "markdownDescription": "Path to depot tools. By default we search for depot tools in the `$PATH` and then in `~/depot_tools`. When set, the path specified here will be searched first. Use it to point ChromiumIDE to commands such as `cipd`."
+        },
+        "chromiumideShared.demo.enable": {
+          "type": "boolean",
+          "description": "Enable demo features for initial development",
+          "default": false
         }
       }
     },
