--- a/chromiumide/tsconfig.json
+++ b/chromiumide/tsconfig.json
@@ -6,7 +6,7 @@
     "target": "ES2020",
     "lib": ["ES2020"],
     "sourceMap": true,
-    "rootDir": "src",
+    "rootDirs": ["shared", "src"],
     "strict": true /* enable all strict type-checking options */,
     "noImplicitOverride": true /* Ensure overriding members in derived classes are marked with an override modifier. */
     /* Additional Checks */
@@ -14,6 +14,6 @@
     // "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
     // "noUnusedParameters": true,  /* Report errors on unused parameters. */
   },
-  "include": ["src"],
+  "include": ["shared", "src"],
   "exclude": ["node_modules", ".vscode-test"]
 }
